<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/md_white_1000"
    tools:context=".main.MainActivity">

    <com.hugocastelani.waterfalltoolbar.WaterfallToolbar
        android:id="@+id/am_waterfall_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/am_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"/>

    </com.hugocastelani.waterfalltoolbar.WaterfallToolbar>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/am_waterfall_toolbar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="?android:textColorPrimary"
            android:text="@string/initial_elevation_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/initial_elevation_summary"/>

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/am_initial_elevation_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="24dp"
            app:dsb_progressColor="?attr/colorAccent"
            app:dsb_indicatorColor="?attr/colorAccent"
            app:dsb_max="10"
            app:dsb_value="0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="?android:textColorPrimary"
            android:text="@string/final_elevation_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/final_elevation_summary"/>

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/am_final_elevation_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="24dp"
            app:dsb_progressColor="?attr/colorAccent"
            app:dsb_indicatorColor="?attr/colorAccent"
            app:dsb_min="0"
            app:dsb_max="10"
            app:dsb_value="4"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="?android:textColorPrimary"
            android:text="@string/scroll_final_position_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/scroll_final_position_summary"/>

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/am_scroll_final_position_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:dsb_progressColor="?attr/colorAccent"
            app:dsb_indicatorColor="?attr/colorAccent"
            app:dsb_min="1"
            app:dsb_max="20"
            app:dsb_value="12"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/am_restore_default_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/restore_default"/>

        <Button
            android:id="@+id/am_done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/done"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
